workshop04/workpress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: wpdb-netpol
  labels:
    app: wp 
    name: wpdb-netpol 
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/instance: wpdbcluster-mysql
      app.kubernetes.io/name: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: wpapp-po
    ports:
    - port: 3306
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wpapp-netpol
  labels:
    name: wpapp-netpol
spec:
  podSelector:
    matchLabels:
      name: wpapp-po
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
          name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 3306
      protocol: TCP
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
